--- a/apps/web/public/locales/pt-BR.json
+++ b/apps/web/public/locales/pt-BR.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "Comprar instantaneamente",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "\"Comprar instantaneamente\" escolhe números aleatórios, sem duplicatas entre seus bilhetes. Os preços são definidos antes do início de cada ronda, igual a US$5 naquele momento. As compras são definitivas.",
   "Prizes Collected!": "Prêmios coletados!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "Seus prêmios KLAY da ronda %lotteryId% foram enviados para sua carteira",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "A reivindicação %claimNum% de %claimTotal% para a ronda %lotteryId% foi bem sucedida. Confirme a próxima transação",
+  "Your %symbol% prizes have been sent to your wallet": "Seus prêmios %symbol% da ronda %lotteryId% foram enviados para sua carteira",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "A reivindicação %claimNum% de %claimTotal% para a ronda %lotteryId% foi bem sucedida. Confirme a próxima transação",
   "Claiming": "Reivindicando",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "Os bilhetes devem corresponder o número vencedor na mesma ordem, começando do primeiro dígito.",
   "If the winning number is “123456”:": "Se o número vencedor for \"123456\":",
