--- a/apps/web/public/locales/ru-RU.json
+++ b/apps/web/public/locales/ru-RU.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "Купить мгновенно",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "Функция \"Купить мгновенно\" выбирает случайные номера так, чтобы среди билетов не было одинаковых. Цены устанавливаются до начала каждого раунда равными 5 долл. США. Покупки необратимы.",
   "Prizes Collected!": "Призы получены!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "Призы KLAY за раунд %lotteryId% были отправлены в кошелек",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "Получение %claimNum% из %claimTotal% за раунд %lotteryId% выполнено. Подтвердите следующую транзакцию",
+  "Your %symbol% prizes have been sent to your wallet": "Призы %symbol% за раунд %lotteryId% были отправлены в кошелек",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "Получение %claimNum% из %claimTotal% за раунд %lotteryId% выполнено. Подтвердите следующую транзакцию",
   "Claiming": "Идет получение",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "Билеты должны совпадать с выигрышным номером в том же порядке, начиная с первой цифры.",
   "If the winning number is “123456”:": "Если выигрышный номер — 123456:",
