--- a/apps/web/public/locales/sv-SE.json
+++ b/apps/web/public/locales/sv-SE.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "Köp direkt",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "\"Köp direkt\" väljer slumpmässiga siffror utan duplikat i biljetterna. Priserna sätts före varje omgång och motsvarar då 5 dollar. Köp kan inte ångras.",
   "Prizes Collected!": "Priserna har hämtats ut!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "Dina KLAY-priser under omgång %lotteryId% har skickats till din plånbok",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "Under omgång %lotteryId% hämtades %claimNum% av %claimTotal% ut. Vänligen bekräfta nästa transaktion",
+  "Your %symbol% prizes have been sent to your wallet": "Dina %symbol%-priser under omgång %lotteryId% har skickats till din plånbok",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "Under omgång %lotteryId% hämtades %claimNum% av %claimTotal% ut. Vänligen bekräfta nästa transaktion",
   "Claiming": "Hämtar ut",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "Lottsedlarna måste matcha det vinnande numret i exakt samma ordning räknat från första siffran.",
   "If the winning number is “123456”:": "Om det vinnande numret är 123456:",
