--- a/apps/web/public/locales/en-US.json
+++ b/apps/web/public/locales/en-US.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "Buy Instantly",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.",
   "Prizes Collected!": "Prizes Collected!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "Your KLAY prizes for round %lotteryId% have been sent to your wallet",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction",
+  "Your %symbol% prizes have been sent to your wallet": "Your %symbol% prizes have been sent to your wallet",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction",
   "Claiming": "Claiming",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "Tickets must match the winning number in the exact same order, starting from the first digit.",
   "If the winning number is “123456”:": "If the winning number is “123456”:",
