--- a/apps/web/public/locales/fi-FI.json
+++ b/apps/web/public/locales/fi-FI.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "Osta heti",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "Osta heti valitsee satunnaiset numerot siten, ettei lipuissasi ole päällekkäisyyksiä. Hinnat asetetaan ennen kunkin kierroksen alkua vastaten 5 dollaria kyseisenä ajankohtana. Ostot ovat lopullisia.",
   "Prizes Collected!": "Palkinnot kerätty!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "Kierroksen %lotteryId% KLAY-palkintosi on lähetetty lompakkoosi",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "%claimNum%/%claimTotal% lunastus kierroksella %lotteryId% onnistui. Vahvista seuraava transaktio",
+  "Your %symbol% prizes have been sent to your wallet": "Kierroksen %lotteryId% %symbol%-palkintosi on lähetetty lompakkoosi",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "%claimNum%/%claimTotal% lunastus kierroksella %lotteryId% onnistui. Vahvista seuraava transaktio",
   "Claiming": "Lunastetaan",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "Lippujen täytyy vastata voittonumeroa täsmälleen samassa järjestyksessä ensimmäisestä numerosta alkaen.",
   "If the winning number is “123456”:": "Jos voittonumero on “123456”:",
