--- a/apps/web/public/locales/fil-PH.json
+++ b/apps/web/public/locales/fil-PH.json
@@ -691,8 +691,8 @@
   "Buy Instantly": "Bumili kaagad",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "Ang \"Pagbili kaagad\" ay pumipili ng mga sapalaran na numero, na walang mga duplikado sa iyong mga ticket. Ang mga presyo ay itinakda bago magsimula ang bawat round, na katumbas ng $5 sa oras na iyon. Ang mga pagbili ay pangwakas.",
   "Prizes Collected!": "Mga Nakolektang mga Premyo!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "Ang iyong mga premyo sa KLAY para sa round na %lotteryId% ay naipadala na sa iyong wallet",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "I-claim ang %claimNum% ng %claimTotal% para sa round na %lotteryId% ay matagumpay. Mangyaring kumpirmahin ang susunod na transaksyon",
+  "Your %symbol% prizes have been sent to your wallet": "Ang iyong mga premyo sa %symbol% para sa round na %lotteryId% ay naipadala na sa iyong wallet",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "I-claim ang %claimNum% ng %claimTotal% para sa round na %lotteryId% ay matagumpay. Mangyaring kumpirmahin ang susunod na transaksyon",
   "Claiming": "Pag-claim",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "Ang mga ticket ay dapat na tumugma sa nanalong numero sa eksaktong parehong pagkakasunud-sunod, simula sa unang digit.",
   "If the winning number is “123456”:": "Kung ang nanalong numero ay “123456”:",
