--- a/apps/web/public/locales/fr-FR.json
+++ b/apps/web/public/locales/fr-FR.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "Acheter instantanément",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "La fonction « Acheter instantanément » choisit des nombres aléatoires et sans doublon parmi vos tickets. Les prix sont fixés avant le début de chaque tirage et s'élèvent à 5 USD. Les achats sont définitifs.",
   "Prizes Collected!": "Prix récupérés !",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "Vos prix en KLAY pour le tirage %lotteryId% ont été envoyés dans votre portefeuille",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "La récupération %claimNum% de %claimTotal% pour le tirage %lotteryId% a réussi. Veuillez confirmer la transaction suivante",
+  "Your %symbol% prizes have been sent to your wallet": "Vos prix en %symbol% pour le tirage %lotteryId% ont été envoyés dans votre portefeuille",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "La récupération %claimNum% de %claimTotal% pour le tirage %lotteryId% a réussi. Veuillez confirmer la transaction suivante",
   "Claiming": "Récupération",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "Les tickets doivent correspondre au numéro gagnant exactement dans le même ordre, en commençant par le premier chiffre.",
   "If the winning number is “123456”:": "Si le numéro gagnant est « 123456 » :",
