--- a/apps/web/public/locales/hu-HU.json
+++ b/apps/web/public/locales/hu-HU.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "Azonnali vétel",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "Az „Azonnali vétel\" véletlen számokat választ úgy, hogy a szelvények között nincs másodpéldány. Az árakat minden forduló megkezdése előtt állapítják meg, ekkor 5 dollárnak felelnek meg. A vásárlások véglegesek.",
   "Prizes Collected!": "Nyeremények begyűjtve!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "A %lotteryId% forduló KLAY nyereményeit elküldtük a tárcájába",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "%claimTotal%-ból %claimNum% igény sikeres volt a %lotteryId% fordulóban. Kérjük, erősítse meg a következő ügyletet",
+  "Your %symbol% prizes have been sent to your wallet": "A %lotteryId% forduló %symbol% nyereményeit elküldtük a tárcájába",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "%claimTotal%-ból %claimNum% igény sikeres volt a %lotteryId% fordulóban. Kérjük, erősítse meg a következő ügyletet",
   "Claiming": "Igénylés folyamatban",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "A szelvényeknek pontosan ugyanabban a sorrendben kell megegyezniük a nyertes számmal, az első számjegytől kezdve.",
   "If the winning number is “123456”:": "Ha a nyertes szám “123456”:",
