--- a/apps/web/public/locales/ta-IN.json
+++ b/apps/web/public/locales/ta-IN.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "உடனே வாங்குக",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "\"உடனே வாங்குக\" உங்கள் டிக்கெட்களுக்கு இடையே டூப்ளிகேட் இல்லாமல் தற்போக்கு எண்களைத் தேர்ந்தெடுக்கிறது. விலைகள், அந்த நேரத்தில் $5 க்குச் சமமாக ஒவ்வொரு சுற்றின் தொடக்கத்திற்கு முன்னரும் அமைக்கப்படுகிறது. பர்சேஸ்கள் இறுதியானவை.",
   "Prizes Collected!": "பரிசுகள் சேகரிக்கப்பட்டன!",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "சுற்று %lotteryId% க்கான உங்கள் KLAY பரிசுகள் உங்கள் வாலெட்டிற்கு அனுப்பப்பட்டுவிட்டன",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "சுற்று %lotteryId% க்கு %claimTotal% ல் %claimNum% -ஐ கிளைம் செய்வது வெற்றிகரமானது. அடுத்தப் பரிவத்தனையை உறுதிசெய்திடுங்கள்",
+  "Your %symbol% prizes have been sent to your wallet": "சுற்று %lotteryId% க்கான உங்கள் %symbol% பரிசுகள் உங்கள் வாலெட்டிற்கு அனுப்பப்பட்டுவிட்டன",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "சுற்று %lotteryId% க்கு %claimTotal% ல் %claimNum% -ஐ கிளைம் செய்வது வெற்றிகரமானது. அடுத்தப் பரிவத்தனையை உறுதிசெய்திடுங்கள்",
   "Claiming": "கிளைம் செய்தல்",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "டிக்கெட்கள், முதல் இலக்கத்திலிருந்து தொடங்கி துல்லியமாய் அதே வரிசையில் வெற்றி எண்களைப் பொருத்த வேண்டும்.",
   "If the winning number is “123456”:": "வெற்றி எண் “123456” ஆக இருந்தால்:",
