--- a/apps/web/public/locales/zh-TW.json
+++ b/apps/web/public/locales/zh-TW.json
@@ -694,8 +694,8 @@
   "Buy Instantly": "立即購買",
   "\"Buy Instantly\" chooses random numbers, with no duplicates among your tickets. Prices are set before each round starts, equal to $5 at that time. Purchases are final.": "點擊「立即購買」時，將自動為您的彩券選擇隨機不重複的６個號碼。每張彩券的價格於每回合開始前決定，相當於當時價值 5 美元的CAKE。購買後不可變更。",
   "Prizes Collected!": "獎金已領取！",
-  "Your KLAY prizes for round %lotteryId% have been sent to your wallet": "您第 %lotteryId% 回合的 KLAY 獎金已傳送到您的錢包",
-  "Claim %claimNum% of %claimTotal% for round %lotteryId% was successful. Please confirm the next transaction": "已成功領取第 %lotteryId% 回合的 %claimNum%，共 %claimTotal%。請確認下一次交易",
+  "Your %symbol% prizes have been sent to your wallet": "您第 %lotteryId% 回合的 %symbol% 獎金已傳送到您的錢包",
+  "Claim %claimNum% of %claimTotal% was successful. Please confirm the next transaction": "已成功領取第 %lotteryId% 回合的 %claimNum%，共 %claimTotal%。請確認下一次交易",
   "Claiming": "正在領取",
   "Tickets must match the winning number in the exact same order, starting from the first digit.": "彩券必須從第一位開始以完全相同的順序相符於中獎號碼。",
   "If the winning number is “123456”:": "如果中獎號碼為「123456」：",
